# 8puzzle

./: .gitignore  README.md
cpp/: CMakeLists.txt  build.bat  input.json  reset.bat
cpp/src/: main.cpp
cpp/src/include/: 8puzzle.cpp  8puzzle.h
node/: package-lock.json  package.json
node/public/: index.html
node/public/scripts/: 8Puzzle.js  8PuzzleAnalysis.js  KeyboardInputEvent.js  Render.js  Socket.js  TreeView.js  main.js
node/public/styles/: global.css
node/src/: index.js
node/src/8puzzleSDK/lib/: puzzlelib.exp  puzzlelib.lib
